--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ text.php
 .bash_history
 wp-content/wphb-cache/index.html
 wp-content/wphb-cache/wphb-cache.php
+wp-content/wphb-logs/page-caching-log.php
